// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List.vue has 3 results one is filtered 1`] = `
<v-content-stub tag="main">
  <v-container-stub tag="div">
    <v-card-stub tag="div">
      <v-list-stub twoline="true" class="py-0">
        <group-list-stub group="[object Object]" tags="tag2,tagA"></group-list-stub>
        <group-list-stub group="[object Object]" tags="taga" usedivider="true" style="display: none;"></group-list-stub>
        <group-list-stub group="[object Object]" tags="tag2,tagB" usedivider="true"></group-list-stub>
      </v-list-stub>
    </v-card-stub>
  </v-container-stub>
</v-content-stub>
`;

exports[`List.vue has an error 1`] = `
<v-content-stub tag="main">
  <q-empty-stub icon="photo" description="" error="true"></q-empty-stub>
</v-content-stub>
`;

exports[`List.vue has no results 1`] = `
<v-content-stub tag="main">
  <v-container-stub tag="div">
    <ol>
      <li>You don't have any tag linked to a group. To start linking tags search through your groups or find new groups with the Search bar.</li>
      <li>Add tags with the <v-icon-stub>settings</v-icon-stub> icon of any group. For example:
        <ul>
          <li><a href="https://www.flickr.com/groups/flickr10photowalks/">Flickr Worldwide Photowalks</a> use the <group-tag-dialog-chip-stub tag="photowalk"></group-tag-dialog-chip-stub> tag.</li>
          <li><a href="https://www.flickr.com/groups/peopleandpersons/">People and Persons</a> use the <group-tag-dialog-chip-stub tag="people"></group-tag-dialog-chip-stub>, <group-tag-dialog-chip-stub tag="person"></group-tag-dialog-chip-stub>, <group-tag-dialog-chip-stub tag="woman"></group-tag-dialog-chip-stub> and/or <group-tag-dialog-chip-stub tag="man"></group-tag-dialog-chip-stub> tag.</li>
          <li><a href="https://www.flickr.com/groups/catchy/">!Catchy Colors</a> use the <group-tag-dialog-chip-stub tag="color"></group-tag-dialog-chip-stub> or <group-tag-dialog-chip-stub tag="colour"></group-tag-dialog-chip-stub> tag.</li>
          <li><a href="https://www.flickr.com/groups/minimally_less_is_more/">Less Is More...</a> use the <group-tag-dialog-chip-stub tag="minimalism"></group-tag-dialog-chip-stub> tag.</li>
          <li><a href="https://www.flickr.com/groups/blackandwhite/">Black and White</a> use the <group-tag-dialog-chip-stub tag="b&amp;w"></group-tag-dialog-chip-stub> tag.</li>
        </ul>
      </li>
      <li>Once the tag/s has been linked to the group all your previous photos with that tag will be shared to that group automatically. New photos you upload will be added too.</li>
    </ol>
  </v-container-stub>
</v-content-stub>
`;

exports[`List.vue is loading 1`] = `
<v-content-stub tag="main">
  <q-empty-stub icon="" description="" loading="true"></q-empty-stub>
</v-content-stub>
`;
